// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Prueba en el component <GifIem /> prueba en el snapshot 1`] = `
<div>
  <div
    class="card"
  >
    <img
      alt="hola"
      src="https://imagen.com/logo.png"
    />
    <p>
      hola
    </p>
  </div>
</div>
`;

exports[`Pruebas en <GifItem /> debe de hacer match con el snapshot 1`] = `
<div>
  <div
    class="card"
  >
    <img
      alt="Saitama"
      src="https://one-punch.com/saitama.jpg"
    />
    <p>
      Saitama
    </p>
  </div>
</div>
`;
